# dev-hud

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  harness.html  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  format.test.ts  format.ts  harness.tsx  hooks.ts  styles.css  types.ts  useCollectors.ts  useCustomCards.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  alerts.rs  cli.rs  custom_cards.rs  diagnostics.rs  docker.rs  fsutil.rs  git.rs  github.rs  health.rs  kill.rs  lib.rs  main.rs  mcp_health.rs  openclaw.rs  scanner.rs  tailscale.rs  types.rs  usage_claude.rs  usage_codex.rs  wmi_bridge.rs
src-tauri/src/hardware/: battery.rs  disks.rs  gpu.rs  lhm_setup.rs  mcp.rs  mod.rs  netq.rs  ollama.rs  ports.rs  speedtest.rs  thermals.rs  uptime.rs  winget.rs  wsl.rs
src/components/: AlertCenter.test.tsx  AlertCenter.tsx  Card.test.tsx  Card.tsx  CardCanvas.test.tsx  CardCanvas.tsx  ClaudeCard.tsx  CodexCard.tsx  CommandPalette.tsx  CustomCard.test.tsx  CustomCard.tsx  DataRow.test.tsx  DataRow.tsx  DiagnosticsCard.tsx  DiagnosticsPanel.tsx  DockerCard.tsx  GitCard.tsx  Inspector.tsx  OpenClawCard.tsx  ProcessesCard.tsx  ReposCard.tsx  SessionsCard.tsx  SettingsPanel.tsx  StatusBits.tsx  SystemCard.tsx  TailscaleCard.tsx  Timeline.tsx  cardDiscipline.test.ts  density.tsx  hardware.tsx  navigation.test.tsx  viz.tsx
src/model/: alerts.test.ts  alerts.ts  cardStatus.test.ts  cardStatus.ts  diagnosticsExport.ts  entities.ts  entityGraph.test.ts  (+14 more)
(+1 files in other folders)
