[package]
name = "dev-hud"
version = "0.1.0"
description = "Dev HUD — always-on desktop widget for your AI dev stack"
authors = ["Tommy Rush"]
license = "MIT"
edition = "2021"

[lib]
name = "dev_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.6"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
tauri-plugin-store = "2.4.4"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
futures = "0.3"
walkdir = "2"
dirs = "6"
window-vibrancy = "0.6"
wmi = "0.15"
winreg = "0.55"
listeners = "0.2"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
